--- a/style.css
+++ b/style.css
@@ -135,3 +135,16 @@ border-radius:100%;color:white;
     text-transform:uppercase;
     padding-bottom:10px;
 }
+a{
+    text-decoration:none;
+    color:blue;
+}
+.project{
+    font-family: 'Roboto', sans-serif;
+}
+.project th,td{
+    padding: 10px;
+}
+.bold-column{
+    font-weight: bold;
+}
